--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/editTextPersonalNumber"
         android:layout_below="@+id/textView10"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Slutför bokningen"
-        android:id="@+id/button"
+        android:id="@+id/buttonCompleteBooking"
         android:layout_below="@+id/textView12"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="48dp" />
