--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -83,11 +83,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextAdress"
-        android:layout_centerVertical="true"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_below="@+id/textView17"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editTextName"
-        android:layout_alignEnd="@+id/editTextName" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
